infra/terraform/security.tf
resource "aws_security_group" "alb" {
  name   = "${local.name}-sg-alb"
  vpc_id = aws_vpc.vpc.id
  ingress { from_port=80  to_port=80  protocol="tcp" cidr_blocks=["0.0.0.0/0"] }
  ingress { from_port=443 to_port=443 protocol="tcp" cidr_blocks=["0.0.0.0/0"] }
  egress  { from_port=0 to_port=0 protocol="-1" cidr_blocks=["0.0.0.0/0"] }
  tags = local.tags
}

resource "aws_security_group" "ecs" {
  name   = "${local.name}-sg-ecs"
  vpc_id = aws_vpc.vpc.id
  ingress {
    from_port       = 8000
    to_port         = 8000
    protocol        = "tcp"
    security_groups = [aws_security_group.alb.id]
  }
  egress { from_port=0 to_port=0 protocol="-1" cidr_blocks=["0.0.0.0/0"] }
  tags = local.tags
}

resource "aws_security_group" "db" {
  name   = "${local.name}-sg-db"
  vpc_id = aws_vpc.vpc.id
  ingress {
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.ecs.id]
  }
  egress { from_port=0 to_port=0 protocol="-1" cidr_blocks=["0.0.0.0/0"] }
  tags = local.tags
}

resource "aws_security_group" "redis" {
  name   = "${local.name}-sg-redis"
  vpc_id = aws_vpc.vpc.id
  ingress {
    from_port       = 6379
    to_port         = 6379
    protocol        = "tcp"
    security_groups = [aws_security_group.ecs.id]
  }
  egress { from_port=0 to_port=0 protocol="-1" cidr_blocks=["0.0.0.0/0"] }
  tags = local.tags
}
